adicao de footer com creditos, imagem do github rotativa, footer fixed e adicao de padding em main para nao o sobrepor, aumento do padding de #centered-element para nao ter overflow de #exitcontainer

--- a/style.scss
+++ b/style.scss
@@ -4,13 +4,12 @@ $green-card:rgb(73, 192, 73);
     padding: 0;
     box-sizing: border-box;
 }
-html{
+html,body{
     height: 100%;
     
 }
 body{ 
     background-color: rgba(200, 202, 202, 0.178) !important;
-    margin: auto;
 }
 
 header{
@@ -19,12 +18,35 @@ header{
     margin-bottom: 5px;
 }
 main{
+    min-height: 100vh;
+    padding-bottom: 55px;
     
 }
 label{
     font-size: 1.3em;
     margin-bottom: 3px;
 }
+
+
+#containerAddBook{ 
+    text-align: center;
+    height: 50px;
+    margin-bottom: 3%;
+    margin-top: 15px;
+}
+#addBook{
+    width: 8%;
+    height: 100%;
+    transition: transform .2s ease 50ms;
+}
+#library{
+    padding: 0 1% 1% 1%;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(4,1fr);
+    gap: 10px;
+}
+
 #overlay{
     background-color:rgba(0,0,0,0.5);
     position: fixed;
@@ -40,25 +62,6 @@ label{
     transition: transform .2s ease-out 10ms;
 }
 
-#containerAddBook{ 
-    text-align: center;
-    height: 50px;
-    margin-bottom: 4%;
-}
-#addBook{
-    width: 8%;
-    height: 100%;
-    transition: transform .2s ease 50ms;
-}
-#library{
-    min-height: 400px;
-    padding: 0 1% 1% 1%;
-    display: grid;
-    align-items: center;
-    grid-template-columns: repeat(4,1fr);
-    gap: 10px;
-}
-
 @mixin genericCard{ 
     width: 90%;
     border-radius: 7%;
@@ -66,20 +69,20 @@ label{
    
 }
 
-form.card{ 
-    background-color:$green-card;
-    max-height: 100%;
-    padding: 5% 0;
-    @include genericCard();
-}
-
 form{
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     
 }
+
+form.card{ 
+    background-color:$green-card;
+    padding: 5% 0;
+    @include genericCard();
+}
+
+
 .exitContainer{
     display: flex;
     height: 10%;
@@ -87,6 +90,7 @@ form{
     justify-content: flex-end;
     
 }
+
 #exit,.remove{
     cursor: pointer;
     color: white;
@@ -154,6 +158,7 @@ form{
 
 }
 #centered-element{
+    z-index: 10;
     background-color: $green-card;
     @include genericCard();
     display: grid;
@@ -163,7 +168,7 @@ form{
     position: fixed;
     top: 50%;
     left: 50%;
-    padding: 1% 0 2% 0;
+    padding: 2% 0 2% 0;
     transform:scale(0) translate(-50%, -50%)
     
   }
@@ -175,3 +180,48 @@ form{
     transition: transform .4s ease-in;
     
   }
+  footer {
+    min-height: 55px;
+    gap: 1%;
+    position: fixed;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: #1f2937;
+    width: 100%;
+}
+
+
+
+#gitHubLogo {
+    width: 30px;
+    border: solid 1px transparent;
+    border-radius: 15px;
+}
+
+
+/* animacao para o logo do github girar*/
+#gitHubLogo:hover {
+    -webkit-animation: spin 4s linear infinite;
+    -moz-animation: spin 4s linear infinite;
+    animation: spin 4s linear infinite;
+}
+@-moz-keyframes spin {
+    100% {
+        -moz-transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
